# controllers/Rentals.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Rentals = require('../service/RentalsService');
 
-module.exports.rentUnicorn = function rentUnicorn (req, res, next, rentalData) {
-  Rentals.rentUnicorn(rentalData)
+module.exports.rentUnicorn = function rentUnicorn (req, res, next, body) {
+  Rentals.rentUnicorn(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -13,8 +13,8 @@ module.exports.rentUnicorn = function rentUnicorn (req, res, next, rentalData) {
     });
 };
 
-module.exports.returnUnicorn = function returnUnicorn (req, res, next, rentalData) {
-  Rentals.returnUnicorn(rentalData)
+module.exports.returnUnicorn = function returnUnicorn (req, res, next, body) {
+  Rentals.returnUnicorn(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
